[gd_scene load_steps=17 format=2]

[ext_resource path="res://Data/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]
[ext_resource path="res://ATTENT03.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
draw_center = false

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="Panel"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escape" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Zurück"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileCounterReset" type="Button" parent="."]
margin_left = 160.0
margin_top = 60.0
margin_right = 620.0
margin_bottom = 140.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Datei Zähler zurücksetzen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Information" type="Button" parent="FileCounterReset"]
margin_left = 480.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 130.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="FileCounterReset/Information"]
margin_left = 700.0
margin_top = 55.0
margin_right = 1700.0
margin_bottom = 747.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FileCounterReset/Information/PopupDialog"]
margin_left = 10.0
margin_top = 10.0
margin_right = 611.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
text = "Setzt die Dateinummerierung zurück"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="FileCounterReset/Information/PopupDialog"]
margin_left = 10.0
margin_top = 50.0
margin_right = 755.0
margin_bottom = 645.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Achtung!

Dateien können nur ordendlich geschrieben werden, wenn
zuerst alle alten dateien verschoben oder gelöscht worden 
sind!

Dateien die mit Excel geöffnet  wurden werden von 
Microsoft in einem extra Ordner abgespeichert und und 
werden bis zu ihrem löschen statt jeglicher anderer Datei
geöffnet!

Suchen sie im vorhinein nach einer datei die sie schon 
geöffnet haben und löschen sie die dateien aus dem 
gefundenem Ordner!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="FileCounterReset/Information/PopupDialog"]
margin_left = 10.0
margin_top = 645.0
margin_right = 708.0
margin_bottom = 684.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.247059, 0.603922, 1, 1 )
shortcut_in_tooltip = false
text = "Dauert zu lange? Benutzen sie Everything"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="WindowDialog" parent="."]
margin_left = 60.0
margin_top = 60.0
margin_right = 260.0
margin_bottom = 250.0
rect_scale = Vector2( 2, 2 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Error"]
margin_left = 8.0
margin_top = 8.0
margin_right = 130.0
margin_bottom = 125.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Download_Everything" type="LinkButton" parent="Error"]
margin_left = 10.0
margin_right = 974.0
margin_bottom = 39.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.247059, 0.603922, 1, 1 )
text = "https://www.voidtools.com/Everything-1.4.1.935.x86.zip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Label" parent="."]
margin_left = 160.0
margin_top = 160.0
margin_right = 405.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 10 )
text = "Vollbild Modus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckButton" parent="Fullscreen"]
margin_left = 271.581
margin_top = -20.0
margin_right = 347.581
margin_bottom = 20.4395
rect_scale = Vector2( 2, 2 )
custom_styles/focus = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Button" parent="Fullscreen"]
visible = false
margin_left = 480.0
margin_top = -5.0
margin_right = 540.0
margin_bottom = 39.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="Fullscreen/Warning"]
visible = true
margin_left = 700.0
margin_top = 145.0
margin_right = 1318.0
margin_bottom = 326.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Fullscreen/Warning/PopupDialog"]
margin_left = 10.0
margin_top = 10.0
margin_right = 611.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Bei Absturz des Programmes 
kann es bei Vollbild nicht ohne 
ausloggen des Nutzers geschlossen
 werden!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="Label" parent="."]
margin_left = 160.0
margin_top = 220.0
margin_right = 405.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 10 )
text = "Randlos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="CheckButton" parent="Borderless"]
margin_left = 271.581
margin_top = -20.0
margin_right = 347.581
margin_bottom = 20.4395
rect_scale = Vector2( 2, 2 )
custom_styles/focus = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Button" parent="Borderless"]
visible = false
margin_left = 480.0
margin_top = -5.0
margin_right = 635.0
margin_bottom = 120.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="Borderless/Warning"]
visible = true
margin_left = 700.0
margin_top = 205.0
margin_right = 1104.0
margin_bottom = 346.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Borderless/Warning/PopupDialog"]
margin_left = 10.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Im Randlosen Modus 
kann das Fenster nicht 
bewegt werden!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSceme" type="Button" parent="."]
margin_left = 178.529
margin_top = 287.32
margin_right = 305.529
margin_bottom = 332.32
custom_fonts/font = SubResource( 13 )
text = "Dunkel"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Escape" to="." method="_on_Escape_pressed"]
[connection signal="pressed" from="FileCounterReset" to="." method="_on_FileCounterReset_pressed"]
[connection signal="pressed" from="FileCounterReset/Information" to="." method="_on_Information_pressed"]
[connection signal="pressed" from="FileCounterReset/Information/PopupDialog/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Error/Download_Everything" to="." method="_on_Download_Everything_pressed"]
[connection signal="pressed" from="Fullscreen/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Fullscreen/Warning" to="." method="_on_Warning_pressed"]
[connection signal="pressed" from="Borderless/Borderless" to="." method="_on_Borderless_pressed"]
[connection signal="pressed" from="Borderless/Warning" to="." method="_on_BorderlessWarning_pressed"]
[connection signal="pressed" from="ColorSceme" to="." method="_on_ColorSceme_pressed"]
